# virtual_gamepad_linux

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  VERSION.md  build.sh  run.sh
src/: main.cpp  virtual_gamepad.cpp  virtual_gamepad.h
